# python-readability

./: .gitignore  .travis.yml  Makefile  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
doc/source/: conf.py
readability/: __init__.py  cleaners.py  debug.py  encoding.py  htmls.py  readability.py
tests/: test_article_only.py
tests/samples/: si-game.sample.html
